--- a/apps/website/src/pages/docs/components/forms/search-input/props.mdx
+++ b/apps/website/src/pages/docs/components/forms/search-input/props.mdx
@@ -5,4 +5,6 @@ scope: props
 
 ## Props
 
+The `SearchInput` composes the `Input` component, so you can use all the `Input` props.
+
 <PropsTable of="SearchInput" />
