--- a/apps/website/src/pages/docs/components/forms/select/usage.mdx
+++ b/apps/website/src/pages/docs/components/forms/select/usage.mdx
@@ -12,7 +12,7 @@ description: A custom select component.
 ## Import
 
 ```ts
-import { Select } from '@saas-ui/react'
+import { Select, SelectButton, SelectList, SelectOption } from '@saas-ui/react'
 ```
 
 ## Usage
@@ -27,7 +27,10 @@ import { Select } from '@saas-ui/react'
     { label: 'Netherlands', value: 'nl' },
     { label: 'USA', value: 'us' },
   ]}
-/>
+>
+  <SelectButton />
+  <SelectList />
+</Select>
 ```
 
 ### Sizes
@@ -42,7 +45,10 @@ import { Select } from '@saas-ui/react'
       { label: 'USA', value: 'us' },
     ]}
     size="lg"
-  />
+  >
+    <SelectButton />
+    <SelectList />
+  </Select>
 
   <Select
     name="country"
@@ -52,7 +58,10 @@ import { Select } from '@saas-ui/react'
       { label: 'USA', value: 'us' },
     ]}
     size="md"
-  />
+  >
+    <SelectButton />
+    <SelectList />
+  </Select>
 
   <Select
     name="country"
@@ -62,7 +71,10 @@ import { Select } from '@saas-ui/react'
       { label: 'USA', value: 'us' },
     ]}
     size="sm"
-  />
+  >
+    <SelectButton />
+    <SelectList />
+  </Select>
 
   <Select
     name="country"
@@ -72,7 +84,10 @@ import { Select } from '@saas-ui/react'
       { label: 'USA', value: 'us' },
     ]}
     size="xs"
-  />
+  >
+    <SelectButton />
+    <SelectList />
+  </Select>
 </Stack>
 ```
 
@@ -90,7 +105,10 @@ import { Select } from '@saas-ui/react'
     { value: 'Traveling' },
   ]}
   multiple
-/>
+>
+  <SelectButton />
+  <SelectList />
+</Select>
 ```
 
 ### Custom options
@@ -98,32 +116,42 @@ import { Select } from '@saas-ui/react'
 Alternatively you can use `MenuItemOption` to compose the select options, which gives you full control and flexibility.
 
 ```jsx
-<Select name="interest" placeholder="Select your favourite cat">
-  <MenuItemOption value="No cats">I don't like cats</MenuItemOption>
-  <MenuDivider />
-  <MenuItemOption value="Fluffybuns the Destroyer">
-    <HStack>
-      <Image
-        boxSize="2rem"
-        borderRadius="full"
-        src="https://placekitten.com/100/100"
-        alt="Fluffybuns the destroyer"
-        mr="12px"
-      />
-      <span>Fluffybuns the Destroyer</span>
-    </HStack>
-  </MenuItemOption>
-  <MenuItemOption value="Simon the pensive">
-    <HStack>
-      <Image
-        boxSize="2rem"
-        borderRadius="full"
-        src="https://placekitten.com/120/120"
-        alt="Simon the pensive"
-        mr="12px"
-      />
-      <span>Simon the pensive</span>
-    </HStack>
-  </MenuItemOption>
-</Select>
+import { Image, HStack, MenuDivider } from '@chakra-ui/react'
+import { Select, SelectButton, SelectList, SelectOption } from '@saas-ui/react'
+
+export default function CatSelect() {
+  return (
+    <Select name="interest" placeholder="Select your favourite cat">
+      <SelectButton />
+      <SelectList>
+        <SelectOption value="No cats">I don't like cats</SelectOption>
+        <MenuDivider />
+        <SelectOption value="Fluffybuns the Destroyer">
+          <HStack>
+            <Image
+              boxSize="2rem"
+              borderRadius="full"
+              src="https://placekitten.com/100/100"
+              alt="Fluffybuns the destroyer"
+              mr="12px"
+            />
+            <span>Fluffybuns the Destroyer</span>
+          </HStack>
+        </SelectOption>
+        <SelectOption value="Simon the pensive">
+          <HStack>
+            <Image
+              boxSize="2rem"
+              borderRadius="full"
+              src="https://placekitten.com/120/120"
+              alt="Simon the pensive"
+              mr="12px"
+            />
+            <span>Simon the pensive</span>
+          </HStack>
+        </SelectOption>
+      </SelectList>
+    </Select>
+  )
+}
 ```
