--- a/apps/website/src/pages/docs/components/advanced-data/filters/props.mdx
+++ b/apps/website/src/pages/docs/components/advanced-data/filters/props.mdx
@@ -2,3 +2,25 @@
 id: filters
 scope: props
 ---
+
+## Props
+
+### FiltersProvider Props
+
+<PropsTable of="FiltersProvider" />
+
+### FiltersAddButton Props
+
+<PropsTable of="FiltersAddButton" />
+
+### ActiveFilter Props
+
+<PropsTable of="ActiveFilter" />
+
+### ActiveFiltersList Props
+
+<PropsTable of="ActiveFiltersList" />
+
+### NoFilteredResults Props
+
+<PropsTable of="NoFilteredResults" />
