--- a/apps/website/src/pages/docs/components/advanced-data/filters/usage.mdx
+++ b/apps/website/src/pages/docs/components/advanced-data/filters/usage.mdx
@@ -17,11 +17,14 @@ description: Intuitive data filtering components.
 
 ```ts
 import {
-  FilterMenu,
+  FiltersProvider,
+  FiltersAddButton,
   ActiveFilter,
   ActiveFilters,
   FiltersProvider,
-} from '@saas-ui/pro'
+  NoFilteredResults,
+  useDataGridFilter,
+} from '@saas-ui-pro/react'
 ```
 
 ## Usage
@@ -31,7 +34,19 @@ The FiltersProvider can be used together with `DataGrid` to create intuitive dat
 ### Basic
 
 ```jsx
-function ListPage() {
+import { Spacer, Badge } from '@chakra-ui/react'
+import {
+  Page,
+  PageHeader,
+  PageBody,
+  Toolbar,
+  FiltersProvider,
+  FiltersAddButton,
+  ActiveFiltersList,
+} from '@saas-ui-pro/react'
+import { FiCircle } from 'react-icons/fi'
+
+export default function ListPage() {
   const filters = React.useMemo(
     () => [
       {
@@ -43,12 +58,21 @@ function ListPage() {
           {
             id: 'new',
             label: 'New',
-            icon: <StatusBadge bg="blue.400" />,
+            icon: (
+              <Badge boxSize="8px" mx="2px" borderRadius="full" bg="blue.400" />
+            ),
           },
           {
             id: 'active',
             label: 'Active',
-            icon: <StatusBadge bg="green.400" />,
+            icon: (
+              <Badge
+                boxSize="8px"
+                mx="2px"
+                borderRadius="full"
+                bg="green.400"
+              />
+            ),
           },
         ],
       },
@@ -58,17 +82,19 @@ function ListPage() {
 
   return (
     <FiltersProvider filters={filters}>
-      <Page
-        title="Contacts"
-        toolbar={
-          <Toolbar variant="outline">
-            <FiltersAddButton />
-            <Spacer />
-          </Toolbar>
-        }
-      >
+      <Page>
+        <PageHeader
+          title="Contacts"
+          toolbar={
+            <Toolbar variant="outline">
+              <FiltersAddButton />
+              <Spacer />
+            </Toolbar>
+          }
+        />
+
         <ActiveFiltersList />
-        <PageBody fullWidth></PageBody>
+        <PageBody></PageBody>
       </Page>
     </FiltersProvider>
   )
@@ -78,7 +104,20 @@ function ListPage() {
 ## Usage with DataGrid
 
 ```jsx
-function ListPage() {
+import { Spacer, Badge } from '@chakra-ui/react'
+import {
+  Page,
+  PageHeader,
+  PageBody,
+  Toolbar,
+  FiltersProvider,
+  FiltersAddButton,
+  ActiveFiltersList,
+  getDataGridFilter,
+} from '@saas-ui-pro/react'
+import { FiCircle, FiUser } from 'react-icons/fi'
+
+export default function ListPage() {
   const gridRef = useRef()
 
   const filters = React.useMemo(
@@ -92,12 +131,21 @@ function ListPage() {
           {
             id: 'new',
             label: 'New',
-            icon: <StatusBadge bg="blue.400" />,
+            icon: (
+              <Badge boxSize="8px" mx="2px" borderRadius="full" bg="blue.400" />
+            ),
           },
           {
             id: 'active',
             label: 'Active',
-            icon: <StatusBadge bg="green.400" />,
+            icon: (
+              <Badge
+                boxSize="8px"
+                mx="2px"
+                borderRadius="full"
+                bg="green.400"
+              />
+            ),
           },
         ],
       },
@@ -121,17 +169,17 @@ function ListPage() {
         meta: {
           href: ({ id }) => `#customers/${id}`,
         },
-        filterFn: useDataGridFilter('string'),
+        filterFn: getDataGridFilter('string'),
       },
       {
         accessorKey: 'email',
         header: 'Email',
-        filterFn: useDataGridFilter('string'),
+        filterFn: getDataGridFilter('string'),
       },
       {
         accessorKey: 'company',
         header: 'Company',
-        filterFn: useDataGridFilter('string'),
+        filterFn: getDataGridFilter('string'),
       },
       {
         accessorKey: 'status',
@@ -139,18 +187,22 @@ function ListPage() {
         cell: (cell) => {
           const value = cell.getValue()
           return (
-            <Tag colorScheme={value === 'new' ? 'orange' : 'green'} size="sm">
+            <Tag
+              colorScheme={value === 'new' ? 'blue' : 'green'}
+              size="sm"
+              variant="outline"
+            >
               {value}
             </Tag>
           )
         },
-        filterFn: useDataGridFilter('string'),
+        filterFn: getDataGridFilter('string'),
       },
       {
         accessorKey: 'isLead',
         header: 'Lead',
         hidden: true,
-        filterFn: useDataGridFilter('boolean'),
+        filterFn: getDataGridFilter('boolean'),
       },
       {
         accessorKey: 'employees',
@@ -202,16 +254,16 @@ function ListPage() {
 
   return (
     <FiltersProvider filters={filters} onChange={onFilter}>
-      <Page
-        title="Contacts"
-        height="400px"
-        toolbar={
-          <Toolbar variant="outline">
-            <FiltersAddButton />
-            <Spacer />
-          </Toolbar>
-        }
-      >
+      <Page height="400px">
+        <PageHeader
+          title="Contacts"
+          toolbar={
+            <Toolbar variant="outline">
+              <FiltersAddButton />
+              <Spacer />
+            </Toolbar>
+          }
+        />
         <ActiveFiltersList />
         <PageBody fullWidth>
           <DataGrid
@@ -235,7 +287,20 @@ function ListPage() {
 ### DataGrid with default filters
 
 ```jsx
-function ListPage() {
+import { Spacer, Badge } from '@chakra-ui/react'
+import {
+  Page,
+  PageHeader,
+  PageBody,
+  Toolbar,
+  FiltersProvider,
+  FiltersAddButton,
+  ActiveFiltersList,
+  getDataGridFilter,
+} from '@saas-ui-pro/react'
+import { FiCircle, FiUser } from 'react-icons/fi'
+
+export default function ListPage() {
   const gridRef = useRef()
 
   const filters = React.useMemo(
@@ -249,12 +314,21 @@ function ListPage() {
           {
             id: 'new',
             label: 'New',
-            icon: <StatusBadge bg="blue.400" />,
+            icon: (
+              <Badge boxSize="8px" mx="2px" borderRadius="full" bg="blue.400" />
+            ),
           },
           {
             id: 'active',
             label: 'Active',
-            icon: <StatusBadge bg="green.400" />,
+            icon: (
+              <Badge
+                boxSize="8px"
+                mx="2px"
+                borderRadius="full"
+                bg="green.400"
+              />
+            ),
           },
         ],
       },
@@ -278,17 +352,17 @@ function ListPage() {
         meta: {
           href: ({ id }) => `#customers/${id}`,
         },
-        filterFn: useDataGridFilter('string'),
+        filterFn: getDataGridFilter('string'),
       },
       {
         accessorKey: 'email',
         header: 'Email',
-        filterFn: useDataGridFilter('string'),
+        filterFn: getDataGridFilter('string'),
       },
       {
         accessorKey: 'company',
         header: 'Company',
-        filterFn: useDataGridFilter('string'),
+        filterFn: getDataGridFilter('string'),
       },
       {
         accessorKey: 'status',
@@ -301,13 +375,13 @@ function ListPage() {
             </Tag>
           )
         },
-        filterFn: useDataGridFilter('string'),
+        filterFn: getDataGridFilter('string'),
       },
       {
         accessorKey: 'isLead',
         header: 'Lead',
         hidden: true,
-        filterFn: useDataGridFilter('boolean'),
+        filterFn: getDataGridFilter('boolean'),
       },
       {
         accessorKey: 'employees',
@@ -357,7 +431,10 @@ function ListPage() {
     []
   )
 
-  const defaultFilters = [{ id: 'status', operator: 'isNot', value: 'new' }]
+  const defaultFilters = React.useMemo(
+    () => [{ id: 'status', operator: 'isNot', value: 'new' }],
+    []
+  )
 
   return (
     <FiltersProvider
@@ -401,25 +478,3 @@ function ListPage() {
   )
 }
 ```
-
-## Props
-
-### FiltersProvider Props
-
-<PropsTable of="FiltersProvider" />
-
-### FiltersAddButton Props
-
-<PropsTable of="FiltersAddButton" />
-
-### ActiveFilter Props
-
-<PropsTable of="ActiveFilter" />
-
-### ActiveFiltersList Props
-
-<PropsTable of="ActiveFiltersList" />
-
-### NoFilteredResults Props
-
-<PropsTable of="NoFilteredResults" />
