--- a/apps/website/src/pages/docs/components/data-display/property/usage.mdx
+++ b/apps/website/src/pages/docs/components/data-display/property/usage.mdx
@@ -34,28 +34,52 @@ import {
 ### Basic Property
 
 ```jsx
-<Property label="Name" value="Elliot Alderson" />
+<Property>
+  <PropertyLabel>Name</PropertyLabel>
+  <PropertyValue>Elliot Alderson</PropertyValue>
+</Property>
 ```
 
 ### Label width
 
 Label text will be truncated if it doesnt fit.
 
+The default width is `30%` with a min-width of `100px`. When you set a width, the min-width will be ignored.
+
 ```jsx
-<Property label="Billing plan" value="Professional" labelWidth="80px" />
+<Property>
+  <PropertyLabel width="40px">Billing plan</PropertyLabel>
+  <PropertyValue>Professional</PropertyValue>
+</Property>
 ```
 
 ### Property with icon
 
 ```jsx
-<Property label={<EmailIcon />} value="hello@saas-ui.dev" labelWidth="32px" />
+<Property>
+  <PropertyLabel width="24px">
+    <EmailIcon display="block" />
+  </PropertyLabel>
+  <PropertyValue>hello@saas-ui.dev</PropertyValue>
+</Property>
 ```
 
 ### Property list
 
 ```jsx
 <PropertyList>
-  <Property label="Name" value="Elliot Alderson" />
+  <Property>
+    <PropertyLabel>Name</PropertyLabel>
+    <PropertyValue>Elliot Alderson</PropertyValue>
+  </Property>
+  <Property>
+    <PropertyLabel>Role</PropertyLabel>
+    <PropertyValue>Hacker</PropertyValue>
+  </Property>
+  <Property>
+    <PropertyLabel>Birthday</PropertyLabel>
+    <PropertyValue>September 17, 1986</PropertyValue>
+  </Property>
 </PropertyList>
 ```
 
@@ -101,24 +125,54 @@ Label text will be truncated if it doesnt fit.
 ### Editable property
 
 ```jsx
-<PropertyList>
-  <Property
-    label="Name"
-    value={
-      <Editable defaultValue="Eelco">
-        <EditablePreview />
-        <EditableInput />
-      </Editable>
-    }
-  />
-  <Property
-    label="Status"
-    value={
-      <Select value="Open">
-        <MenuItemOption value="Open">Open</MenuItemOption>
-        <MenuItemOption value="Closed">Closed</MenuItemOption>
-      </Select>
-    }
-  />
-</PropertyList>
+import { Editable, EditablePreview, EditableInput } from '@chakra-ui/react'
+import {
+  PropertyList,
+  Property,
+  Select,
+  SelectButton,
+  SelectList,
+  SelectOption,
+} from '@saas-ui/react'
+
+export default function Editable() {
+  return (
+    <PropertyList>
+      <Property
+        label="Name"
+        value={
+          <Editable defaultValue="Eelco" width="200px">
+            <EditablePreview
+              display="flex"
+              alignItems="center"
+              px="3"
+              fontSize="sm"
+              w="full"
+              minH="8"
+              _hover={{ bg: 'gray.100', borderRadius: 'md', cursor: 'pointer' }}
+              _dark={{
+                _hover: {
+                  bg: 'whiteAlpha.100',
+                },
+              }}
+            />
+            <EditableInput size="xs" />
+          </Editable>
+        }
+      />
+      <Property
+        label="Status"
+        value={
+          <Select value="Open">
+            <SelectButton size="sm" variant="ghost" width="200px" />
+            <SelectList>
+              <SelectOption value="Open">Open</SelectOption>
+              <SelectOption value="Closed">Closed</SelectOption>
+            </SelectList>
+          </Select>
+        }
+      />
+    </PropertyList>
+  )
+}
 ```
